# database-of-things

./: .gitignore  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_REVIEW.md  BACKUP_SYSTEM.md  CLAUDE.md  CURATOR_ARCHITECTURE.md  CURATOR_ARCHITECTURE_FINAL.md  CURATOR_ARCHITECTURE_V2.md  DISCLAIMER.md  EMBEDDING_ARCHITECTURE.md  EMBEDDING_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSE-DATA  PRODUCTION_READINESS.md  PRODUCTION_READINESS_PUBLIC.md  README.md  THUMBNAIL_QUICKSTART.md  VARIANTS_VERIFICATION.md  docker-compose.embedding.yml  docker-compose.yml  pyproject.toml
.curator/: .gitignore  ETHICAL_CURATION_GUIDELINES.md  README.md  secrets.env.example  secrets.local.env.example  secrets.prod.env.example
.github/: dependabot.yml
collections/: CLAUDE.md  README.md
curator/: .env.example  .env.production.example  .env.staging.example  ENVIRONMENTS.md  README.md  __init__.py  __main__.py  cli.py  config.py  errors.py  mcp.py  pipeline.py  pyproject.toml  requirements.txt  state.py  test_discovery_automated.py  validator.py
curator/.curator/curators/Power Rangers Toys/: config.json  plan.md
curator/.curator/curators/Power Rangers Toys/scripts/: fetch_rangerwiki.py  import_toylines.py  validate_collection.py
curator/curator/: __init__.py  cli.py  discovery.py  runner.py  storage.py  tools.py
curator/tests/: __init__.py  test_cli.py  test_discovery.py  test_runner.py  test_storage.py  test_tools.py
curators/: .env.example  FINAL_MODEL_CONFIG.md  LATEST_MODELS.md  MODEL_STATUS.md  MULTI_MODEL_GUIDE.md  PHASE1_COMPLETE.md  PHASE1_MULTI_MODEL_COMPLETE.md  PHASE2_AUTONOMOUS_ARCHITECTURE.md  PHASE2_ELDEN_RING_CURATOR.md  PHASE2_META_SYSTEM_COMPLETE.md  PHASE3A_IMPLEMENTATION_STATUS.md  PHASE3_CLI_ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test_multi_model.py  test_phase1.py
curators/cli/: __init__.py  main.py  setup_wizard.py
curators/cli/commands/: delete.py  info.py  init.py  list.py  run.py
curators/cli/conversation/: schema_builder.py  source_discovery.py  workflow_planner.py
curators/cli/storage/: curator_store.py  s3_client.py
curators/config/: mem0_google.json
curators/core/: autonomous_curator.py  config.py  discovery_agent.py  execution_engine.py  llm.py  memory.py  workflow_generator.py
curators/curators/: elden_ring_curator.py
curators/examples/: elden_ring_autonomous.py
curators/scripts/: init_elden_ring_collection.py
curators/utilities/: image_processor.py  progress.py  rate_limiter.py  supabase_client.py  token_budget.py
docs/: curator-technical-reference.md  curator-user-guide.md  dbot-target-architecture.md  graphql-api-reference.md  graphql-user-guide.md  rearchitecture-plan.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
pgadmin/: pgpass  servers.json
scripts/: curator-tools  db-backup  db-restore  generate-all-thumbnails  localize-power-rangers-images.sh  manage-embeddings  repair-migrations  safe-migrate  seed-sample-data.py  storage-backup  storage-restore  upgrade-power-rangers-images.sh
supabase/: config.toml
tags/: CLAUDE.md  template.schema.json
tests/: conftest.py  run-all-tests.sh  test_cli.py  test_config.py  (+5 more)
(+28661 files in other folders)
