[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curator"
version = "0.1.0"
description = "Deterministic pipeline for importing collectibles via MCP"
requires-python = ">=3.12"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
curator = "curator.cli:cli"

[tool.setuptools.packages.find]
include = ["curator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/curator"
markers = ["integration: requires external services (network, Supabase)"]
