[project]
name = "curator"
version = "0.1.0"
description = "Agentic curator system for collectibles database"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "supabase>=2.9.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
    "asyncpg>=0.29.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[project.scripts]
curator = "curator.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["curator*"]
