[project]
name = "collectible-curators"
version = "0.1.0"
description = "Autonomous curator agents for managing collectible database imports"
requires-python = ">=3.11"
dependencies = [
    # Core agent framework
    "deepagents>=0.2.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",

    # Memory system
    "mem0ai>=0.1.0",

    # Database
    "supabase>=2.0.0",
    "asyncpg>=0.29.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "rich>=13.7.0",  # For CLI output
    "typer>=0.12.0",  # For CLI framework

    # Rate limiting & caching
    "redis>=5.0.0",
    "tenacity>=8.2.0",

    # Image processing
    "pillow>=10.0.0",

    # AWS SDK (for S3 persistence)
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

# LLM Provider options (install what you need)
openai = [
    "langchain-openai>=0.2.0",
]
# Google provider requires OpenAI for Mem0 (hybrid approach due to dependency conflicts)
google = [
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",  # Required for Mem0 memory operations
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
all-providers = [
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
]

[project.scripts]
curator = "cli.main:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "utilities*", "workflows*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
